5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_1185.log
== TEST (2019-05-21 21:56:21) 
-- CODE:
from numpy import *
v0 = zeros(5, dtype=int)
v1 = ones(4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:56:31) 
-- CODE:
from numpy import *
v0 = zeros(15, dtype=int)
v1 = ones(43, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:56:39) 
-- CODE:
from numpy import *
v0 = zeros(15, dtype=float)
v1 = ones(43, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:56:53) 
-- CODE:
from numpy import *
v0 = zeros(15, dtype=float)
v1 = ones(43, dtype=str)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:57:11) 
-- CODE:
from numpy import *
v0 = zeros(15, dtype=int)
v1 = ones(43, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:57:17) 
-- CODE:
from numpy import *
v0 = zeros(5, dtype=int)
v1 = ones(5, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:02:58) 
-- CODE:
# Leitura de dados
notas = array(eval(input("Notas: ")))
# Maior nota
print(max(notas))
# Menor nota
print(min(notas))
# Qtde. de alunos
print(size(notas))
# Media de desempenho
print(sum(notas) / size(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:33:50) 
-- CODE:
from numpy import *
# Leitura de dados
nomes = array(eval(input("Nomes dos candidatos: ")))
votos = array(eval(input("Qtde de votos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:33:58) 
-- CODE:
from numpy import *
# Leitura de dados
nomes = array(eval(input("Nomes dos candidatos: ")))
votos = array(eval(input("Qtde de votos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:34:06) 
-- CODE:
from numpy import *
# Leitura de dados
nomes = array(eval(input("Nomes dos candidatos: ")))
votos = array(eval(input("Qtde de votos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:36:26) 
-- CODE:
from numpy import *
# Leitura de dados
nomes = array(eval(input("Nomes dos candidatos: ")))
votos = array(eval(input("Qtde de votos: ")))
# Primeiro indice
i = 0
while (votos[i] != max(votos)):
	i = i + 1
print(nomes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:38:20) 
-- CODE:
from numpy import *
# Leitura de dados
nomes = array(eval(input("Nomes dos candidatos: ")))
votos = array(eval(input("Qtde de votos: ")))
# Primeiro indice
i = 0
while (votos[i] != max(votos)):
	i = i + 1
print(nomes[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:16:12) 
-- CODE:
vetor=array(eval(input('digite:")
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
File "XXXX", line 1
    vetor=array(eval(input('digite:")
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:16:26) 
-- CODE:
vetor=array(eval(input('digite:")))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
File "XXXX", line 1
    vetor=array(eval(input('digite:")))
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:16:37) 
-- CODE:
vetor=array(eval(input('digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:17:35) 
-- CODE:
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:18:15) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:19:23) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabetic
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:19:46) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabeticos+1
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:20:00) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabeticos+1
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:20:23) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabeticos+1
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- EXECUTION TIME:
0.405867
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:20:47) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabeticos+1
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:20:49) 
-- CODE:
from numpy import *
vetor=array(eval(input('Digite:')))
i=0
q_diabeticos=0							  
while(i<len(vetor)):
		if(vetor[i]>99):
			print(i)
			q_diabeticos= q_diabeticos+1
		i=i+1
print(q_diabeticos)	
		
		
				
		

							  
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
